static/css/base.css
html,
body {
    margin: 0;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

main {
    flex: 1;
    display: flex;
    flex-direction: column;
}


footer {
    font-size: 0.9rem;
}

.top-header {
    background: #111;
}

.top-header .top-header-link {
    color: #fff;
    text-decoration: none;
}

.top-header .top-header-link:hover {
    text-decoration: underline;
}

.toast-container .toast {
    width: 360px;
    margin-bottom: 12px;
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .15);
    overflow: visible !important;
}

.custom-toast {
    position: relative;
    overflow: visible !important;
}

.arrow-up {
    position: absolute;
    top: -10px;
    right: 22px;
    width: 0;
    height: 0;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-bottom: 10px solid black;
    z-index: 10;
}

/* stop the toast growing off-screen */
.toast-container .toast {
    max-height: 80vh;
    /* never taller than 80% of screen */
    overflow: hidden !important;
}

.input-group .btn {
    min-width: 38px;
    border-radius: 0;
}

.btn.btn-outline-black {
    --bs-btn-color: #000;
    --bs-btn-border-color: #000;
    --bs-btn-hover-color: #fff;
    --bs-btn-hover-bg: #000;
    --bs-btn-hover-border-color: #000;
    border-width: 2px;
    padding: 12px 28px;
}

.btn.btn-black {
    --bs-btn-color: #fff;
    --bs-btn-bg: #000;
    --bs-btn-border-color: #000;
    --bs-btn-hover-bg: #222;
    --bs-btn-hover-border-color: #222;
    padding: 12px 28px;
}

@media (max-width: 1399px) {
    .navbar-collapse {
        background: #fff;
        padding: 1rem;
    }

    .navbar-nav {
        flex-direction: column;
    }
}


.navbar-inner {
    max-width: 1400px;
    margin: 0 auto;
    width: 100%;

    display: flex;
    align-items: center;
}

